[package]
name = "audio_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0" # For error handling in renderer setup
bytemuck = { version = "1.14", features = [
  "derive",
] } # For converting data for wgpu buffers
eframe = { version = "0.27.2", features = [
  "wgpu",
] } # Ensure wgpu feature is enabled
egui = "0.27.2"
glam = { version = "0.25", features = [
  "bytemuck",
] } # For 3D math, bytemuck is required for glam
parking_lot = "0.12" # For efficient locking, render sharing
rand = "0.8" # For point generation
rodio = { version = "0.17", features = ["mp3"] }
rustfft = "6.1" # For Fast Fourier Transform (FFT) analysis of audio track slices
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
type-map = "0.5.0" # Required for egui_wgpu
wgpu = "0.19" # Ensure this version is compatible with eframe's wgpu
